<?xml version="1.0"?>
<package format="3">
  <name>dvrk_robot</name>
  <version>2.2.1</version>
  <description>The dvrk_robot package</description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <author email="anton.deguet@jhu.edu">Anton Deguet</author>
  <license>cisst</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cisst_ros2_crtk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
